# Yasconf

./: .clang-format  .gitignore  CMakeLists.txt  README.md  packages.json
include/yasconf/: config.hpp  config_entry.hpp  config_entry_const_iterator.hpp  config_entry_iterator.hpp  config_parser.hpp  file_reader.hpp  section.hpp  section_iterator.hpp  yasconf_error_codes.hpp
source/: CMakeLists.txt  config_parser.cpp  file_reader.cpp  section.cpp  yasconf_error_codes.cpp
tests/: CMakeLists.txt  config_tests.cpp  file_reader_tests.cpp  packages.json  parser_tests.cpp
tests/data/: simple_config.txt
